[project]
name = "zalutka"
version = "0.1.0"
description = "Production-ready Telegram bot with long-term memory and modular architecture"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aiogram>=3.14,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.14,<2",
    "redis[hiredis]>=5.2,<6",
    "celery[redis]>=5.4,<6",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "openai>=1.58,<2",
    "pgvector>=0.3,<1",
    "httpx>=0.27,<1",
    "tiktoken>=0.8,<1",
    "structlog>=24.4,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
